# minnesotaAlorithm

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/minnesotaproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Minnesota.c  Minnesota.h  abs.c  abs.h  analbeat.c  bdac.c  bdac.h  buildInfo.mat  classify.c  codeInfo.mat  conv.c  conv.h  diff.c  diff.h  dll1.c  dll1.h  dll1.lnk  dll1_emxAPI.c  dll1_emxAPI.h  dll1_emxutil.c  dll1_emxutil.h  dll1_initialize.c  dll1_initialize.h  dll1_rtw.bat  dll1_rtw.mk  dll1_terminate.c  dll1_terminate.h  dll1_types.h  ecgcodes.h  eml_setop.c  eml_setop.h  filter.c  filter.h  filtfilt.c  filtfilt.h  findpeaks.c  findpeaks.h  flipud.c  flipud.h  (+62 more)
app/src/main/java/com/example/minnesotaproject/: ECGConfig.java  LeadValueItem.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/minnesotaproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
